Fixed message boxes stretching outside parent, removed debug logs

--- a/css/message.scss
+++ b/css/message.scss
@@ -133,6 +133,8 @@
 
     border-radius: var( --small-gap );
 
+    box-sizing: border-box;
+
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -185,5 +187,6 @@
 
     .paragraphContainer {
         width: 100%;
+        border-radius: 0px;
     }
 }
